# signal-dispatch

./: .env.example  .gitignore  README.md  generate_styled_pdf.py  probe_notes.py  probe_output.json  probe_substack.py  publish_to_substack.py  pyproject.toml  run-recon.sh  run-scan.sh
.claude/: CLAUDE.md
.claude/instructions/: mirofish.md
.claude/missions/: delta-engine.md  new-issue.md  persona-and-build.md
config/: com.signaldispatch.delta.plist  newsletter.yaml  persona.yaml  sources.yaml
content/brand/: generate_profile_final.py  generate_profile_fractal.py  generate_profile_v2.py  generate_profiles.py  generate_sierpinski_3d.py  generate_sierpinski_final.py  generate_sierpinski_options.py
content/drafts/: 2-deep_dive.html  generate_og_deep_dive_10.py  generate_og_deep_dive_9.py  generate_og_image.py  generate_og_image_11.py  generate_og_image_12.py  generate_og_image_5.py  generate_og_image_9.py
content/published/: 10-deep_dive-2026-03-21.md  11-deep_dive-2026-03-25.md  12-deep_dive-2026-05-16.md  5-deep_dive-2026-03-18.md  9-deep_dive-2026-03-21.md
content/state/: issues.json  probabilities.json  topics.json
docs/: BUILD.md  PERSONA.md  STYLE-GUIDE.md
docs/sources/: agsi.md  comtrade.md  dolarvzla.md  ecb.md  eia_grid.md  entsog.md  gdelt.md  opensky.md  oryx.md  reliefweb.md  viirs.md  who_outbreaks.md
scripts/: migrate_gdelt_source_keys.py
src/adapters/: __init__.py  acled.py  adsb.py  base.py  census.py  cps_voting.py  elections.py  fred.py  kalshi.py  models.py  noaa.py  opensanctions.py  telegram_osint.py
src/delta/: __init__.py  (+7 more)
(+161 files in other folders)
