[project]
name = "signal-dispatch"
version = "0.1.0"
description = "Geopolitical intelligence newsletter -- self-contained data pipeline"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "cryptography>=42.0.0",
    "beautifulsoup4>=4.12.0",
]

[tool.pyright]
include = ["src"]
extraPaths = ["."]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
